# starlette-cbge

./: LICENSE  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: pythonpackage.yml
example_app/: app.py  db.py
example_app/base_api/: base_common.py  base_pydantic.py  base_typesystem.py
example_app/base_pydantic_api/: base_pydantic.py
scripts/: tests.sh
starlette_cbge/: exceptions.py  interfaces.py  test_client.py
starlette_cbge/endpoints/: __init__.py  base.py  list_endpoint.py  pydantic_base.py  typesystem_base.py
starlette_cbge/schema_backends/: __init__.py  pydantic.py  typesystem.py
starlette_cbge/schema_generator_backends/: __init__.py  openapi_v3.py
tests/: conftest.py  test_base.py
